# test-service

./: .env.sample  .gitignore  README.md  pyproject.toml  settings.py
api_service/: dropbox_serv.py  main.py  redis_serv.py
