[tool.poetry]
name = "test-service"
version = "0.1.0"
description = ""
authors = ["Volodymyr Vereshchak <volodymyr.vereshchak@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
